// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ExpenseList with an empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item-message"
    >
      <span>
        No expenses yet!
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1455}
      createdAt={-604800000}
      description="Groceries"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={599}
      createdAt={0}
      description="Netflix subscription"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={649}
      createdAt={604800000}
      description="New mouse"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
